-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 21, 24, 25
-
Component/s: hotspot
-
b03
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8375159 | 26.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b03 |
| JDK-8373691 | 26 | Roland Westrelin | P3 | Resolved | Fixed | b31 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/03ecc23a-edd5-4bb5-a333-4ff8ea07fd7c-S725/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a5f00f86-8782-4f31-aa03-5b627cca7ef0/runs/f03c12c1-03db-4983-91d0-4d0b18c0065c/workspace/open/src/hotspot/share/opto/compile.cpp:3348), pid=678375, tid=678475
# assert(!addp->is_AddP() || addp->in(AddPNode::Base)->is_top() || addp->in(AddPNode::Base) == n->in(AddPNode::Base)) failed: Base pointers must match (addp 344)
#
# JRE version: Java(TM) SE Runtime Environment (25.0+14) (fastdebug build 25-ea+14-LTS-1537)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+14-LTS-1537, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x8e5e80] Compile::final_graph_reshaping_main_switch(Node*, Final_Reshape_Counts&, unsigned int, Unique_Node_List&)+0x1820
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/e32bbe1d-e945-4ded-9d0a-e114d727b0db-S4480/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b7693975-3317-4180-b39c-1db525520c44/runs/ddd73741-b36d-4d6e-8230-8422649830bc/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_ctw_jars/scratch/1/core.678375)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:MaxRAMPercentage=6.25 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/23/37/bundles/linux-aarch64/jdk-23_linux-aarch64_bin.tar.gz/jdk-23 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/e32bbe1d-e945-4ded-9d0a-e114d727b0db-S4480/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b7693975-3317-4180-b39c-1db525520c44/runs/ddd73741-b36d-4d6e-8230-8422649830bc/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_ctw_jars/tmp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -Djava.awt.headless=true -Xbatch -XX:-ShowMessageBoxOnError -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+DisplayVMOutputToStderr -DCompileTheWorldStartAt=0 -DCompileTheWorldStopAt=1311 -XX:+WhiteBoxAPI -Xbootclasspath/a:. --add-exports=java.base/jdk.internal.jimage=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/jdk.internal.access=ALL-UNNAMED -XX:+LogCompilation -XX:LogFile=hotspot_derby.jar_0_%p.log -XX:ErrorFile=hs_err_derby.jar_0_%p.log -XX:ReplayDataFile=replay_derby.jar_0_%p.log -XX:CompileCommand=exclude,java/lang/invoke/MethodHandle.* -XX:PerMethodTrapLimit=0 -XX:PerMethodSpecTrapLimit=0 -XX:-StackTraceInThrowable -XX:+IgnoreUnrecognizedVMOptions -XX:-ZapUnusedHeapArea -XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP -XX:+StressMacroExpansion -XX:+StressIncrementalInlining -XX:StressSeed=296023849 -XX:CompileCommand=memlimit,*.*,0 sun.hotspot.tools.ctw.CompileTheWorld /opt/mach5/mesos/work_dir/slaves/e32bbe1d-e945-4ded-9d0a-e114d727b0db-S4480/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b7693975-3317-4180-b39c-1db525520c44/runs/ddd73741-b36d-4d6e-8230-8422649830bc/./jib-data/install/org/spec/SPECjvm2008/1.00/SPECjvm2008-1.00.zip/SPECjvm2008/lib/derby.jar
Host: AArch64, 8 cores, 30G, Oracle Linux Server release 9.4
Time: Wed Mar 12 13:50:05 2025 UTC elapsed time: 62.480609 seconds (0d 0h 1m 2s)
--------------- T H R E A D ---------------
Current thread (0x0000ffff24b84ee0): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=678475, stack(0x0000ffff3655a000,0x0000ffff36758000) (2040K)]
Current CompileTask:
C2:62480 25010 b 4 org.apache.derby.impl.services.locks.LockSpace::saveGroup (36 bytes)
Stack: [0x0000ffff3655a000,0x0000ffff36758000], sp=0x0000ffff36752690, free space=2017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8e5e80] Compile::final_graph_reshaping_main_switch(Node*, Final_Reshape_Counts&, unsigned int, Unique_Node_List&)+0x1820 (compile.cpp:3348)
V [libjvm.so+0x8e6ea0] Compile::final_graph_reshaping_impl(Node*, Final_Reshape_Counts&, Unique_Node_List&) [clone .part.0]+0x160 (compile.cpp:3176)
V [libjvm.so+0x8e7780] Compile::final_graph_reshaping_walk(Node_Stack&, Node*, Final_Reshape_Counts&, Unique_Node_List&)+0x170 (compile.cpp:3125)
V [libjvm.so+0x8f080c] Compile::final_graph_reshaping()+0x50c (compile.cpp:3991)
V [libjvm.so+0x8f6294] Compile::Optimize()+0xd24 (compile.cpp:2540)
V [libjvm.so+0x8f857c] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1648 (compile.cpp:858)
V [libjvm.so+0x746924] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x2c0 (c2compiler.cpp:141)
V [libjvm.so+0x906f90] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa1c (compileBroker.cpp:2331)
V [libjvm.so+0x907c9c] CompileBroker::compiler_thread_loop()+0x60c (compileBroker.cpp:1975)
V [libjvm.so+0xd94d18] JavaThread::thread_main_inner()+0x104 (javaThread.cpp:776)
V [libjvm.so+0x1684840] Thread::call_run()+0xac (thread.cpp:231)
V [libjvm.so+0x139c584] thread_native_entry(Thread*)+0x130 (os_linux.cpp:877)
C [libc.so.6+0x806d8] start_thread+0x2d8
- backported by
-
JDK-8373691 C2 crash: assertion failed: Base pointers must match (addp 344)
-
- Resolved
-
-
JDK-8375159 C2 crash: assertion failed: Base pointers must match (addp 344)
-
- Resolved
-
- relates to
-
JDK-8303737 C2: Load can bypass subtype check that enforces it's from the right object type
-
- Resolved
-
-
JDK-8267988 C2: assert(!addp->is_AddP() || addp->in(AddPNode::Base)->is_top() || addp->in(AddPNode::Base) == n->in(AddPNode::Base)) failed: Base pointers must match (addp 1301)
-
- Closed
-
- links to
-
Commit(jdk26)
openjdk/jdk/e0f1c3a7
-
Commit(master)
openjdk/jdk/ad29642d
-
Review(jdk26)
openjdk/jdk/28893
-
Review(master)
openjdk/jdk/25386