8351889: C2 crash: assertion failed:  Base pointers must match (addp 344)

Reviewed-by: rcastanedalo, epeter